# OpenGL-MovingSqr

./: .gitignore  AppDiagram.mdj  CMakeLists.txt  OpenGL-MovingSqr.sln  build.sh
OpenGL-MovingSqr/: OpenGL-MovingSqr.vcxproj  OpenGL-MovingSqr.vcxproj.filters
OpenGL-MovingSqr/resource/shaders/: player.frag  player.vert
OpenGL-MovingSqr/source/: main.cpp  structs.h
OpenGL-MovingSqr/source/base/: Window.h
OpenGL-MovingSqr/source/const/: WindowConfig.h
OpenGL-MovingSqr/source/core/: Application.h  MainLoop.h  MainWindow.h
OpenGL-MovingSqr/source/core/buffer/: Buffer.h  VertexBuffer.h
OpenGL-MovingSqr/source/core/window/: MainWindow.h  MainWindowSpecs.h
OpenGL-MovingSqr/source/entity/: Entity.h
OpenGL-MovingSqr/source/entity/player/: Player.h
OpenGL-MovingSqr/source/file/: File.h
OpenGL-MovingSqr/source/g_unit/: Batch.h  GUnit.h  Primitive.h  Renderer.h  Square.h  Units.h
OpenGL-MovingSqr/source/g_unit/player/: Player.h
OpenGL-MovingSqr/source/handlers/: File.h
OpenGL-MovingSqr/source/input/: Handler.h  Keys.h
OpenGL-MovingSqr/source/specs/: MainWindowSpecs.h
OpenGL-MovingSqr/source/type/: Type.h
OpenGL-MovingSqr/source/util/: Path.h  Utils.h
OpenGL-MovingSqr/source/util/namespaces/: G.h  Input.h  MainWindow.h
